--- a/css/final/style.css
+++ b/css/final/style.css
@@ -21,8 +21,9 @@ li{
     color: gray;
 }
 
-li:hover{
+.header:hover, li:hover{
     color: aqua;
+    cursor: pointer;
 }
 
 .searchbar{
@@ -57,6 +58,7 @@ img{
 .box:hover{
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 
 .about{
